package io.github.ioni5;

public enum Direction {
    HORIZONTAL, VERTICAL, DIAGONAL, NONE, INVERSE

}
